Interim check-in - just put in main layout

--- a/app/components/modals/current-location/current-location.view.html
+++ b/app/components/modals/current-location/current-location.view.html
@@ -1,10 +1,10 @@
 ﻿<div class="modal-header">
-    <h3 class="modal-title" id="modal-title">I'm a modal!</h3>
+    <h3 class="modal-title" id="modal-title">Welcome to WeatherApp!</h3>
 </div>
 <div class="modal-body" id="modal-body">
     Would you like to get the forecast for your current location?
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary" type="button" ng-click="ok()">Sounds great</button>
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Back off, Big Brother!</button>
 </div>
