--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -1,22 +1,264 @@
 ﻿
 
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-3">
+            <div ng-controller="SearchCtrl" id="search-wrapper">
+                <div ng-include="'/app/components/partials/search/search.view.html'" />
+            </div>
+            
+        </div> <!-- .col-md-12 -->
+    </div> <!-- .row -->
+    <div class="row">
+        <div class="col-md-8 col-xs-12">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Current Conditions</div>
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="jumbotron current-conditions">
+                                        <div class="row">
+                                            <div class="col-sm-7 col-xs-12">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-body">
+                                                        <div class="row">
+                                                            <div class="col-xs-12 text-center">
+                                                                <h3>[Bolingbrook]</h3>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-xs-12 text-center"><img src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-xs-12 text-center">
+                                                                <span class="temperature">34&deg; F</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-xs-12 text-center">
+                                                                <span class="description">cloudy</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-xs-12 text-center">
+                                                                <small class="lastUpdated">as of 3:34pm</small>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-offset-1 col-sm-4 col-xs-offset-2 col-xs-10">
+                                                <div class="row">
+                                                    <div class="col-xs-12">
+                                                        <h4>Details</h4>
+                                                        Humidity<br />
+                                                        Wind (spd/degree)<br />
+                                                        Clouds: x%<br />
+                                                        (opt) Rain in last 3 hours:<br />
+                                                        (opt) Snow in last 3 hours:<br />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                                
+                            </div>
+                        </div>
+                    </div>                                        
+                </div>
+            </div>
+            <div class="row next-12-hours">
+                <div class="col-xs-12">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h4>Next 12 hours</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3 next-12-item">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center">
+                                            <h6>3pm</h6>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center"><img src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                                    </div>
+                                    <div class="col-xs-12 text-center">
+                                        <span class="temperature">34&deg; F</span>
+                                    </div>
+                                </div>
+                            </div>                            
+                        </div>    
+                        <div class="col-xs-3 next-12-item">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center">
+                                            <h6>6pm</h6>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center"><img src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                                    </div>
+                                    <div class="col-xs-12 text-center">
+                                        <span class="temperature">34&deg; F</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="col-xs-3 next-12-item">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center">
+                                            <h6>9pm</h6>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center"><img src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                                    </div>
+                                    <div class="col-xs-12 text-center">
+                                        <span class="temperature">34&deg; F</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="col-xs-3 next-12-item">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center">
+                                            <h6>12am</h6>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 text-center"><img src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                                    </div>
+                                    <div class="col-xs-12 text-center">
+                                        <span class="temperature">34&deg; F</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>  
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 col-xs-12">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>Forecast</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default forecast-item">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-5">Fri<br />3/10</div>
+                                <div class="col-xs-4"><span class="forecast-temperature">29 | 16 F</span></div>
+                                <div class="col-xs-3"><img class="forecast-icon" src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default forecast-item">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-5">Fri<br />3/10</div>
+                                <div class="col-xs-4"><span class="forecast-temperature">29 | 16 F</span></div>
+                                <div class="col-xs-3"><img class="forecast-icon" src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default forecast-item">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-5">Fri<br />3/10</div>
+                                <div class="col-xs-4"><span class="forecast-temperature">29 | 16 F</span></div>
+                                <div class="col-xs-3"><img class="forecast-icon" src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default forecast-item">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-5">Fri<br />3/10</div>
+                                <div class="col-xs-4"><span class="forecast-temperature">29 | 16 F</span></div>
+                                <div class="col-xs-3"><img class="forecast-icon" src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default forecast-item">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-xs-5">Fri<br />3/10</div>
+                                <div class="col-xs-4"><span class="forecast-temperature">29 | 16 F</span></div>
+                                <div class="col-xs-3"><img class="forecast-icon" src="http://openweathermap.org/img/w/10d.png" border="0" /></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
 <pre>
 {{ lastLogEntry }}
 </pre>
-
-
-<div class="btn-group dropdown"  dropdown-append-to-body>
-    <button id="btn-append-to-body" type="button" class="btn btn-primary dropdown-toggle">
-        Dropdown on Body <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu dropdown-menu" role="menu" aria-labelledby="btn-append-to-body">
-        <li role="menuitem"><a href="#">Action</a></li>
-        <li role="menuitem"><a href="#">Another action</a></li>
-        <li role="menuitem"><a href="#">Something else here</a></li>
-        <li class="divider"></li>
-        <li role="menuitem"><a href="#">Separated link</a></li>
-    </ul>
-</div>
-
+        </div> <!-- .col-md-12 -->
+    </div> <!-- .row -->
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well well-sm">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <div class="btn-group" uib-dropdown dropdown-append-to-body>
+                            <button id="btn-append-to-body" type="button" class="btn btn-primary btn-show-locations" uib-dropdown-toggle>
+                                View Locations <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body">
+                                <li role="menuitem"><a href="#"><i ng-show="currentLocale.localeType == 'geolocation'" class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;{{ currentLocale.city }}, {{ currentLocale.region }} ({{ currentLocale.zip }})</a></li>
+                                <li class="divider"></li>
+                                <li role="menuitem" ng-repeat="location in locations"><a href="#">{{ location.city }}, {{ location.region }} ({{ location.zip }})</a></li>
+                            </ul>
+                        </div>
+                    </div> <!-- .col-xs-6 -->
+                    <div class="col-xs-6 text-right">
+                        <div class="btn-group" uib-dropdown dropdown-append-to-body>
+                            <button id="btn-append-to-body" type="button" class="btn btn-primary btn-show-locations" uib-dropdown-toggle>
+                                Temperature Units <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body">
+                                <li role="menuitem"><a href="#">Fahrenheit</a></li>
+                                <li role="menuitem"><a href="#">Celsius</a></li>
+                                <li role="menuitem"><a href="#">Kelvin</a></li>
+                            </ul>
+                        </div>
+                    </div> <!-- .col-xs-6 -->
+                </div> <!-- .row -->
+            </div> <!-- .well -->
+        </div> <!-- .col-md-12 -->
+    </div> <!-- .row -->
+</div> <!-- .container -->
