--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,2 +1,58 @@
-﻿body {
+﻿/* Change Show Location button color when expanded */
+button.btn-show-locations[aria-expanded="true"]{ 
+  background-color: #990033;   
+}
+
+.forecast-item div.panel-body {
+    padding-top: 8px;
+    padding-bottom: 0;*
+}
+.forecast-temperature {
+    top: 10px;
+    position: relative;
+}
+
+.forecast-icon {
+    position: relative;
+    top: -5px;
+}
+
+.current-conditions {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.current-conditions h3 {
+    margin-top: 0;
+}
+
+.current-conditions .temperature {
+    font-size: 24px;
+}
+
+.current-conditions .description {
+
+}
+
+.current-conditions .lastUpdated {
+    font-size: 10px;
+}
+
+.next-12-item {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.next-12-item h6 {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.next-12-item .panel-body {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#search-wrapper {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
