--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -48,7 +48,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="row">
-                                                            <div class="col-xs-12 text-center"><img ng-hide="!weatherData.CurrentWeather.weather.icon" src="{{ weatherData.CurrentWeather.weather.icon }}" border="0" /><i ng-hide="weatherData.CurrentWeather.weather.icon" class="fa fa-question fa-5x" aria-hidden="true"></i></div>
+                                                            <div class="col-xs-12 text-center"><img ng-hide="!weatherData.CurrentWeather.weather.icon" src="http://openweathermap.org/img/w/{{ weatherData.CurrentWeather.weather.icon }}.png" border="0" /><i ng-hide="weatherData.CurrentWeather.weather.icon" class="fa fa-question fa-5x" aria-hidden="true"></i></div>
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-xs-12 text-center">
