Basically working extractions of current weather via json parser

--- a/app/components/partials/main/main.view.html
+++ b/app/components/partials/main/main.view.html
@@ -72,11 +72,11 @@
                                                 <div class="row">
                                                     <div class="col-xs-12">
                                                         <h4>Details</h4>
-                                                        <span ng-hide="!weatherData.CurrentWeather.main.humidity" class="detail">Humidity: {{ weatherData.CurrentWeather.main.humidity }}%</span><br />
-                                                        <span ng-hide="!weatherData.CurrentWeather.wind.speed">Wind: {{ weatherData.CurrentWeather.wind.direction }} {{ weatherData.CurrentWeather.wind.speed }} mph</span><br />
-                                                        <span ng-hide="!weatherData.CurrentWeather.clouds" class="detail">Cloudiness: {{ weatherData.CurrentWeather.clouds }}%</span><br />
-                                                        <span ng-hide="!weatherData.CurrentWeather.rain" class="detail">Rain (Last 3 Hours): {{ weatherData.CurrentWeather.rain }}</span><br />
-                                                        <span ng-hide="!weatherData.CurrentWeather.snow" class="detail">Snow (Last 3 Hours): {{ weatherData.CurrentWeather.snow }}</span><br />
+                                                        <span ng-hide="!weatherData.CurrentWeather.main.humidity" class="detail">Humidity: {{ weatherData.CurrentWeather.main.humidity }}%<br /></span>
+                                                        <span ng-hide="!weatherData.CurrentWeather.wind.speed">Wind: {{ weatherData.CurrentWeather.wind.direction }} {{ weatherData.CurrentWeather.wind.speed }} mph<br /></span>
+                                                        <span ng-hide="!weatherData.CurrentWeather.clouds" class="detail">Cloudiness: {{ weatherData.CurrentWeather.clouds }}%<br /></span>
+                                                        <span ng-hide="!weatherData.CurrentWeather.rain" class="detail">Rain (Last 3 Hours): {{ weatherData.CurrentWeather.rain }}<br /></span>
+                                                        <span ng-hide="!weatherData.CurrentWeather.snow" class="detail">Snow (Last 3 Hours): {{ weatherData.CurrentWeather.snow }}<br /></span>
                                                     </div>
                                                 </div>
                                             </div>
